--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
-    "discord.js": "^11.2.1"
+    "discord.js": "^11.2.1",
+    "opusscript": "0.0.6",
+    "ytdl-core": "^0.18.5"
   },
   "devDependencies": {},
   "scripts": {
