--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "dependencies": {
     "discord.js": "^11.2.1",
+    "firebase-admin": "^5.8.0",
     "opusscript": "0.0.6",
     "ytdl-core": "^0.18.5"
   },
