--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "devDependencies": {},
   "scripts": {
+    "build": "npm install",
+    "start": "nodejs app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Raphael Hardt <raphael.hardt@gmail.com>",
