--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "devDependencies": {},
   "scripts": {
     "build": "npm install",
-    "start": "nodejs app.js",
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Raphael Hardt <raphael.hardt@gmail.com>",
