--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "cafe-bot",
-  "version": "0.0.61",
+  "version": "0.0.62",
   "description": "",
   "main": "app.js",
   "dependencies": {
     "discord.js": "^11.2.1",
+    "fast-levenshtein": "^2.0.6",
     "firebase-admin": "^5.8.0",
     "opusscript": "0.0.6",
     "ytdl-core": "^0.18.5"
