primeira versao do gacha pronto, falta os request de desenhos e algumas melhorias no create

--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@redblobgames/mapgen2": "git+https://github.com/redblobgames/mapgen2.git",
     "discord.js": "^11.3.2",
     "fast-levenshtein": "^2.0.6",
-    "firebase-admin": "^5.8.0",
+    "firebase-admin": "^6.0.0",
+    "gifencoder": "^1.1.0",
+    "jimp": "^0.5.3",
     "opusscript": "0.0.6",
     "points-in-polygon": "^0.2.1",
     "poisson-disk-sampling": "^1.0.2",
