--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cafe-bot",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "",
   "main": "app.js",
   "dependencies": {
@@ -8,6 +8,7 @@
     "@redblobgames/mapgen2": "git+https://github.com/redblobgames/mapgen2.git",
     "chalk": "^2.4.1",
     "discord.js": "^11.3.2",
+    "express": "^4.16.4",
     "fast-levenshtein": "^2.0.6",
     "firebase-admin": "^6.0.0",
     "gifencoder": "^1.1.0",
