remodelando tudo pra usar o discordCommando; criei um timerRegistry pra eu ter suporte aos comandos por tempo também; criei um FirebaseProvider pra usar o firebase como banco de dados em vez do sqlite

--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "cafe-bot",
-  "version": "1.0.15",
+  "version": "2.0.0-alpha",
   "description": "",
   "main": "app.js",
   "dependencies": {
     "@redblobgames/dual-mesh": "git+https://github.com/redblobgames/dual-mesh.git",
     "@redblobgames/mapgen2": "git+https://github.com/redblobgames/mapgen2.git",
     "chalk": "^2.4.1",
+    "common-tags": "^1.8.0",
     "discord.js": "^11.3.2",
+    "discord.js-commando": "^0.10.0",
     "express": "^4.16.4",
     "fast-levenshtein": "^2.0.6",
     "firebase-admin": "^6.0.0",
